--- a/services/index.html
+++ b/services/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <title>Stomatologia2</title>
-        <link rel="stylesheet" type="text/css" href="styles/reset.css">
-        <link rel="stylesheet" type="text/css" href="styles/service.css">
-        <link rel="stylesheet" href="icons/css/all.css">
+        <link rel="stylesheet" type="text/css" href="/styles/reset.css">
+        <link rel="stylesheet" type="text/css" href="/styles/service.css">
+        <link rel="stylesheet" href="/icons/css/all.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,600;0,700;1,400;1,
@@ -20,9 +20,9 @@
                     <p>Dento Plus</p>
                   </div>
                       <nav class="link">
-                        <a href="#services" class="link_">Услуги</a>
+                        <a href="/services" class="link_">Услуги</a>
                         <a href="#about_us" class="link_">О нас</a>
-                        <a href="#doctor" class="link_">Врачи</a>
+                        <a href="/doctors" class="link_">Врачи</a>
                         <a href="#reviews" class="link_">Отзывы</a>
                         <a href="#branches" class="link_">Отделения</a>
                       </nav>
