--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                     <p>Dento Plus</p>
                   </div>
                       <nav class="link">
-                        <a href="/services" class="link_">Услуги</a>
+                        <a href="/stomatologia/services" class="link_">Услуги</a>
                         <a href="#about_us" class="link_">О нас</a>
-                        <a href="/doctors" class="link_">Врачи</a>
+                        <a href="/stomatologia/doctors" class="link_">Врачи</a>
                         <a href="#reviews" class="link_">Отзывы</a>
                         <a href="#branches" class="link_">Отделения</a>
                       </nav>
