--- a/doctors/index.html
+++ b/doctors/index.html
@@ -97,13 +97,13 @@
                            семейная стоматологическая<br>клиника в Санкт-Петербурге. </div>
                          <div class="media_footer">
                              <a href="https://www.facebook.com/" class="text_data">Мы в соц сетях</a>
-                             <img src="icons/Vector (3).svg" class="icons_media"/>
+                             <img src="/stomatologia/icons/Vector (3).svg" class="icons_media"/>
                          </div>
                  </div>
                  <div class="block_container">
                     <div class="data_footer">
                      <div class="text_footer_container">
-                       <img src="icons/location-dot-solid 1 (1).svg" class="icons_address"/>
+                       <img src="/stomatologia/icons/location-dot-solid 1 (1).svg" class="icons_address"/>
                        <div class="text_footer_title">НАШИ АДРЕСА:</div> 
                      </div>
                      <div class="text_footer_items">
@@ -114,7 +114,7 @@
                     </div>
                     <div class="data_footer">
                      <div class="text_footer_container">
-                       <img src="icons/Vector (1).svg" class="icons_footer"/>
+                       <img src="/stomatologia/icons/Vector (1).svg" class="icons_footer"/>
                        <div class="text_footer_title">НАШИ ТЕЛЕФОНЫ:</div>
                      </div>
                      <div class="text_footer_items">
@@ -125,7 +125,7 @@
                     </div>
                      <div class="data_footer">
                        <div class="text_footer_container">
-                         <img src="icons/Vector (2).svg" class="icons_footer"/>
+                         <img src="/stomatologia/icons/Vector (2).svg" class="icons_footer"/>
                          <div class="text_footer_title">НАША ПОЧТА:</div>
                        </div>
                        <div class="text_footer_items">
